welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: type mismatch;
 found   : Boolean(false)
 required: Int
			if (c>=13 && c<=19){return false}
                                                   ^countTeen:5: error: type mismatch;
 found   : Boolean(false)
 required: Int
			else if (d>=13 && d<=19){return false}
                                                        ^countTeen:6: error: type mismatch;
 found   : Boolean(true)
 required: Int
				else {return true}
                                             ^countTeen:3: error: type mismatch;
 found   : Unit
 required: Int
		if (b>=13 && b<=19){
                ^countTeen:2: error: type mismatch;
 found   : Unit
 required: Int
	if (a>=13 && a<=19){
        ^