welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	if (a>=13 && a<=19){
		if (b>=13 && b<=19){
			if (c>=13 && c<=19){return false}
			else if (d>=13 && d<=19){return false}
				else {return true}
		}
	}
}